welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: illegal start of simple expression
	if (vacation == false):{
                              ^alarmClock:14: error: ')' expected but '<-' found.
		if (day <- 1 to 5) {
                        ^alarmClock:21: error: illegal start of simple expression
	}
        ^